# sdltablesrust

./: Cargo.toml
src/: clickable.rs  config.rs  main.rs  point.rs  rect.rs  rects.rs
src/shapes/: clickable.rs  impls.rs  into_sdl_rect.rs  mod.rs  rects.rs
