[package]
name = "game-of-life"
version = "0.1.0"
authors = ["dudko"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.34.0", features = ["use-pkgconfig", "static-link", "ttf"] }
rand = { version = "0.6" }
